Got everything aligned to the correct corners

--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 .container {
     display: grid;
-    height: 900px;
-    width: 900px;
+    height: auto;
+    width: auto;
     grid-template-areas: 
         "top-left-nav . . top-right-nav"
         ". logo logo ."
@@ -10,12 +10,27 @@
         " bot-left-nav . . bot-right-nav";
 }
 
+.top-left-nav,
+.top-right-nav,
+.logo,
+.search-bar,
+.button-search,
+.button-lucky,
+.bot-left-nav,
+.bot-right-nav {
+    border: 1px solid black;
+}
+
 .top-left-nav {
     grid-area: top-left-nav;
+    align-self: start;
+    justify-self: start;
 }
 
 .top-right-nav {
     grid-area: top-right-nav;
+    align-self: start;
+    justify-self: end;
 }
 
 .logo {
@@ -36,8 +51,12 @@
 
 .bot-left-nav {
     grid-area: bot-left-nav;
+    align-self: end;
+    justify-self: start;
 }
 
 .bot-right-nav {
     grid-area: bot-right-nav;
+    align-self: end;
+    justify-self: end;
 }
